# nodejs-server/controllers/Usuarios.js
@@ -33,6 +33,16 @@ module.exports.usuariosIdGET = function usuariosIdGET (req, res, next, id) {
     });
 };
 
+module.exports.usuariosIdPUT = function usuariosIdPUT (req, res, next, id) {
+  Usuarios.usuariosIdPUT(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.usuariosPOST = function usuariosPOST (req, res, next, id) {
   Usuarios.usuariosPOST(id)
     .then(function (response) {
